[package]
name = "cat-recognition"
authors = ["Igor Karpenko <chifmaster113@gmail.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15.6"
hdf5 = "0.8.1"
image = "0.24.5"
rulinalg = "0.4.2"
ndarray-image = "0.3.0"